# Tarefa-21.14_Backend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
