[tool.poetry]
name = "fastapi-docker-poetry"
version = "0.1.0"
description = "Projeto FastAPI com Docker, Docker Compose e Poetry"
authors = ["Seu Nome <seu@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
